<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/CiatTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ciatTitle"
            android:textColor="#0868CE"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/CiatBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/ciatBannerDescription"
            app:srcCompat="@drawable/ciat_banner" />

        <Button
            android:id="@+id/CiatInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="#096AD2"
            android:text="@string/ciatInfo"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/edisonTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/edisonTitle"
            android:textColor="#007A79"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/edisonBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/edison_banner" />

        <Button
            android:id="@+id/edisonInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="#F7CF0B"
            android:text="@string/edisonInfo"
            android:textColor="#FFFFFF"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/unityTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/unityTitle"
            android:textColor="#467F35"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/unityBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/unityBannerDescription"
            app:srcCompat="@drawable/unity_banner" />

        <Button
            android:id="@+id/unityInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#467F35"
            android:text="@string/unityInfo"
            android:textSize="35sp" />

    </LinearLayout>
</ScrollView>
