<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Info">

    <TextView
        android:id="@+id/unityTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="138dp"
        android:gravity="center"
        android:text="@string/unityTitle"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/unityLogo"
        android:layout_width="188dp"
        android:layout_height="131dp"
        android:layout_marginTop="109dp"
        android:layout_marginBottom="140dp"
        android:contentDescription="@string/unityLogoDescription"
        app:layout_constraintBottom_toTopOf="@+id/unityAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/unity_logo" />

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="309dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="27dp"
        android:text="@string/tvInfo"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/unityPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unityTitle" />

    <TextView
        android:id="@+id/unityPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="22dp"
        android:text="@string/unityPhone"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/unityAddress"
        app:layout_constraintEnd_toEndOf="@+id/tvInfo"
        app:layout_constraintTop_toBottomOf="@+id/tvInfo" />

    <TextView
        android:id="@+id/unityAddress"
        android:layout_width="322dp"
        android:layout_height="107dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="214dp"
        android:text="@string/unityAddress"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/unityTitle"
        app:layout_constraintStart_toStartOf="@+id/unityPhone"
        app:layout_constraintTop_toBottomOf="@+id/unityLogo" />

    <Button
        android:id="@+id/btReturn"
        android:layout_width="184dp"
        android:layout_height="70dp"
        android:layout_marginBottom="97dp"
        android:backgroundTint="#2D5AAA"
        android:text="@string/btReturn"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unityAddress" />

</androidx.constraintlayout.widget.ConstraintLayout>